--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <p>استخدم أحد الأكواد التالية للحصول على خصم:</p>
         
         <div class="discount-box">
-            <strong>خصم 5% عند شراء منتجين أو أكثر:</strong>
-            <span id="code1">10HE</span>
+            <strong>خصم 17.5 $ عند شراء منتجين أو أكثر:</strong>
+            <span id="code1">07HE</span>
             <button onclick="copyCode('code1')">نسخ</button>
         </div>
         
